2009-08-22  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-mark-entries-1): Only mark all days of a
	given name if the pattern is not more specific.

	* calendar/lunar.el (lunar-phase-names): New option.
	(lunar-phase): Doc fix.
	(lunar-cycles-per-year): New constant.
	(lunar-index): New function.
	(lunar-phase-list, diary-lunar-phases): Use lunar-index.
	(lunar-phase-name): Use lunar-phase-names.
	(calendar-lunar-phases): Use format.
	(lunar-new-moon-on-or-after): Use lunar-cycles-per-year.

	* progmodes/cperl-mode.el (cperl-imenu-name-and-position):
	Copy imenu-example--name-and-position function here for own use.
	(cperl-xsub-scan): Use cperl-imenu-name-and-position.

	* bs.el (bs--redisplay):
	* cus-edit.el (custom-redraw):
	* ibuffer.el (ibuffer-bury-buffer):
	* server.el (server-goto-line-column):
	* startup.el (command-line-1):
	* strokes.el (strokes-xpm-for-stroke):
	* term.el (term-display-buffer-line):
	* view.el (View-goto-line):
	* calc/calc.el (calc-do, calc-trail-buffer):
	* play/gamegrid.el (gamegrid-add-score-insecure):
	* progmodes/ada-mode.el (ada-compile-goto-error):
	* progmodes/ada-xref.el (ada-xref-find-in-modified-ali):
	(ebrowse-select-1st-to-9nth):
	* progmodes/cperl-mode.el (cperl-time-fontification):
	* progmodes/ebrowse.el (ebrowse-toggle-file-name-display)
	* progmodes/gud.el (gud-display-line):
	(idlwave-shell-display-line):
	* progmodes/idlw-shell.el (idlwave-shell-goto-frame)
	* progmodes/make-mode.el (makefile-browser-toggle):
	(vhdl-speedbar-port-copy, vhdl-compose-components-package):
	* progmodes/vhdl-mode.el (vhdl-speedbar-find-file)
	* textmodes/picture.el (picture-draw-rectangle):
	* textmodes/reftex-index.el (reftex-index-goto-letter):
	(reftex-select-jump-to-previous):
	* textmodes/reftex-sel.el (reftex-find-start-point)
	* textmodes/reftex-toc.el (reftex-toc, reftex-toc-restore-region):
	(rst-straighten-deco-spacing, rst-section-tree, rst-toc):